--- a/app/src/main/res/layout/free_leads_item.xml
+++ b/app/src/main/res/layout/free_leads_item.xml
@@ -16,19 +16,35 @@
             android:layout_weight="1"
             android:layout_height="wrap_content"
             android:textSize="24sp"
-            android:id="@+id/freelead_name"/>
+            android:id="@+id/freelead_from"/>
         <TextView
             android:layout_width="0dp"
             android:layout_weight="1"
             android:layout_height="wrap_content"
             android:textSize="24sp"
-            android:id="@+id/freelead_date"/>
-        <ImageButton
-            android:layout_width="wrap_content"
+            android:id="@+id/freelead_to"/>
+        <LinearLayout
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_gravity="end"
-            android:id="@+id/freelead_downarrow"
-            android:src="@android:drawable/arrow_down_float"/>
+            android:orientation="horizontal"
+            android:layout_weight="1">
+            <TextView
+                android:layout_height="wrap_content"
+                android:layout_width="wrap_content"
+                android:textSize="24sp"
+                android:id="@+id/freelead_time_left"/>
+            <ImageButton
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="end"
+                android:id="@+id/freelead_downarrow"
+                android:src="@android:drawable/arrow_down_float"/>
+        </LinearLayout>
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="0.2dp"
+            android:visibility="visible"
+            android:background="#E91E63"/>
     </LinearLayout>
     <LinearLayout android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -39,24 +55,54 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal">
-            <TextView
+            <LinearLayout
                 android:layout_width="0dp"
+                android:layout_height="match_parent"
                 android:layout_weight="1"
-                android:layout_height="wrap_content"
-                android:textSize="24sp"
-                android:id="@+id/freelead_matched"/>
-            <TextView
+                android:orientation="vertical">
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:textSize="24sp"
+                    android:text="@string/moving_size"/>
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:textSize="24sp"
+                    android:id="@+id/freelead_moving_size"/>
+            </LinearLayout>
+            <LinearLayout
                 android:layout_width="0dp"
+                android:layout_height="match_parent"
                 android:layout_weight="1"
-                android:layout_height="wrap_content"
-                android:textSize="24sp"
-                android:id="@+id/freelead_cost"/>
-            <TextView
+                android:orientation="vertical">
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:textSize="24sp"
+                    android:text="@string/moving_date_label"/>
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:textSize="24sp"
+                    android:id="@+id/freelead_moving_date"/>
+            </LinearLayout>
+            <LinearLayout
                 android:layout_width="0dp"
+                android:layout_height="match_parent"
                 android:layout_weight="1"
-                android:layout_height="wrap_content"
-                android:textSize="24sp"
-                android:id="@+id/freelead_time_left"/>
+                android:orientation="vertical">
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:textSize="24sp"
+                    android:text="@string/cost"/>
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:textSize="24sp"
+                    android:id="@+id/freelead_cost"/>
+            </LinearLayout>
         </LinearLayout>
         <Button
             android:id="@+id/freelead_buy"
@@ -65,5 +111,10 @@
             android:layout_gravity="center"
             android:drawableTop="@drawable/ic_shopping_cart_black_24dp"
             android:text="@string/buy_free_lead"/>
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="0.2dp"
+            android:visibility="visible"
+            android:background="#E91E63"/>
     </LinearLayout>
 </LinearLayout>
