--- a/app/src/main/res/layout/fragment_leads.xml
+++ b/app/src/main/res/layout/fragment_leads.xml
@@ -45,6 +45,17 @@
             android:text="@string/leads_error"/>
 
 
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:textAlignment="center"
+            android:textColor="#E91E63"
+            android:textSize="12sp"
+            android:visibility="gone"
+            android:id="@+id/leads_no_internet_message"
+            android:text="@string/waiting_for_network"/>
+
             <android.support.v7.widget.RecyclerView
                 android:id="@+id/leads_recyclerview"
                 android:layout_width="match_parent"
