--- a/app/src/main/res/layout/free_leads_item.xml
+++ b/app/src/main/res/layout/free_leads_item.xml
@@ -15,13 +15,13 @@
             android:layout_width="0dp"
             android:layout_weight="1"
             android:layout_height="wrap_content"
-            android:textSize="24sp"
+            android:textSize="16sp"
             android:id="@+id/freelead_from"/>
         <TextView
             android:layout_width="0dp"
             android:layout_weight="1"
             android:layout_height="wrap_content"
-            android:textSize="24sp"
+            android:textSize="16sp"
             android:id="@+id/freelead_to"/>
         <LinearLayout
             android:layout_width="0dp"
@@ -31,7 +31,7 @@
             <TextView
                 android:layout_height="wrap_content"
                 android:layout_width="wrap_content"
-                android:textSize="24sp"
+                android:textSize="16sp"
                 android:id="@+id/freelead_time_left"/>
             <ImageButton
                 android:layout_width="wrap_content"
@@ -45,63 +45,86 @@
         android:layout_height="wrap_content"
         android:orientation="vertical"
         android:visibility="gone"
+        android:background="@color/accentLight"
         android:id="@+id/freelead_hidden_layout">
         <View
             android:layout_width="match_parent"
             android:layout_height="0.2dp"
             android:visibility="visible"
-            android:background="#E91E63"/>
+            android:background="@color/colorAccent"/>
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal">
+
             <LinearLayout
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:orientation="vertical">
+
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:textSize="24sp"
-                    android:text="@string/moving_size"/>
+                    android:background="@color/colorAccent"
+                    android:gravity="center"
+                    android:text="@string/moving_size"
+                    android:textColor="#FFF"
+                    android:textSize="16sp" />
+
                 <TextView
+                    android:id="@+id/freelead_moving_size"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:textSize="24sp"
-                    android:id="@+id/freelead_moving_size"/>
+                    android:gravity="center"
+                    android:textSize="16sp" />
             </LinearLayout>
+
             <LinearLayout
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:orientation="vertical">
+
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:textSize="24sp"
-                    android:text="@string/moving_date_label"/>
+                    android:background="@color/colorAccent"
+                    android:gravity="center"
+                    android:text="@string/moving_date_label"
+                    android:textColor="#FFF"
+                    android:textSize="16sp" />
+
                 <TextView
+                    android:id="@+id/freelead_moving_date"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:textSize="24sp"
-                    android:id="@+id/freelead_moving_date"/>
+                    android:gravity="center"
+                    android:textSize="16sp" />
             </LinearLayout>
+
             <LinearLayout
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:orientation="vertical">
+
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:textSize="24sp"
-                    android:text="@string/cost"/>
+                    android:background="@color/colorAccent"
+                    android:gravity="center"
+                    android:text="@string/cost"
+                    android:textColor="#FFF"
+                    android:textSize="16sp" />
+
                 <TextView
+                    android:id="@+id/freelead_cost"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:textSize="24sp"
-                    android:id="@+id/freelead_cost"/>
+                    android:gravity="center"
+                    android:textSize="16sp" />
             </LinearLayout>
         </LinearLayout>
         <Button
@@ -109,12 +132,13 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:drawableTop="@drawable/ic_shopping_cart_black_24dp"
+            android:drawableTop="@drawable/ic_shopping_cart_black_16dp"
+            android:textSize="16sp"
             android:text="@string/buy_free_lead"/>
     </LinearLayout>
     <View
         android:layout_width="match_parent"
         android:layout_height="0.8dp"
         android:visibility="visible"
-        android:background="#E91E63"/>
+        android:background="@color/colorAccent"/>
 </LinearLayout>
