--- a/app/src/main/res/layout/leads_item.xml
+++ b/app/src/main/res/layout/leads_item.xml
@@ -13,18 +13,18 @@
             android:layout_width="0dp"
             android:layout_weight="1"
             android:layout_height="wrap_content"
-            android:textSize="24sp"
+            android:textSize="16sp"
             android:id="@+id/lead_name"/>
         <TextView
             android:layout_width="0dp"
             android:layout_weight="1"
             android:layout_height="wrap_content"
-            android:textSize="24sp"
+            android:textSize="16sp"
             android:id="@+id/lead_date"/>
     </LinearLayout>
     <View
         android:layout_width="match_parent"
         android:layout_height="0.8dp"
         android:visibility="visible"
-        android:background="#E91E63"/>
+        android:background="@color/colorAccent"/>
 </LinearLayout>
